# TorrentSearch

./: .env  .gitignore  README.md  Requirements.txt  app.py  current problem.md  github repo.md  ipa build errors.md  new ideas.md  prd.md  pubspec.yaml  requirements.txt
.github/workflows/: build-ipa.yml
ios/Flutter/: Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  TorrentFlowNativeService.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/native/: native_bindings.dart  native_service.dart
lib/core/theme/: app_theme.dart  cupertino_theme.dart
lib/core/widgets/: glass_card.dart
lib/logging/: app_logger.dart
lib/models/: app_settings.dart  history_item.dart  search_result.dart  seedr_item.dart  torrent.dart
lib/providers/: app_providers.dart
lib/providers/downloads/: download_providers.dart
lib/providers/history/: history_providers.dart
lib/providers/search/: search_providers.dart
lib/providers/seedr/: seedr_providers.dart
lib/providers/settings/: settings_providers.dart
lib/services/: background_download_service.dart  download_service.dart  history_service.dart  seedr_service.dart  storage_service.dart  torrent_search_service.dart
lib/services/search/: torrent_search_service.dart
lib/services/torrent/: bencode.dart  magnet_link.dart  peer_wire.dart  (+2 more)
native/: build_ios.sh  patch_xcode.py  patch_xcode.rb
native/libtorrent_ffi/: CMakeLists.txt
native/libtorrent_ffi/include/: torrent_ffi.h
native/libtorrent_ffi/src/: torrent_ffi.cpp
native/torrent_engine/: CMakeLists.txt
native/torrent_engine/include/: torrent_engine.h
native/torrent_engine/src/: bencode.cpp  bencode.h  magnet_uri.cpp  magnet_uri.h  piece_manager.cpp  piece_manager.h  sha1.cpp  sha1.h  torrent_engine.cpp
test/: widget_test.dart
(+22 files in other folders)
